# ray

./: .gitignore  AGENTS.md  README.md  all_pkgs.txt  cache_pythons.py  main.py  process_reqs.py  pyproject.toml  ray.ps1  ray.sh  scratch.ipynb  uv-init-local.ps1  uv-init-local.sh
.github/workflows/: lint.yml  test.yml
reqs/: apps.in  core.in  data.in  ml.in  vis.in
tests/: test_mirror_flow.py  test_units.py
