[project]
name = "ray"
version = "0.1.0"
description = "ray: your local uv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "pip>=26.0.1",
    "pypiserver>=2.4.1",
    "simple503>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "requests>=2.33.1",
    "ruff>=0.15.11",
]
